--- a/register.html
+++ b/register.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to nginx!</h1>
-
-    <a href="./register.html">register </a>
+    Register
   </body>
 </html>
